fixed output spamming the whole 1000 names/ abstracted my printBirthday function